--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/speech": "^6.6.1",
+    "@google-cloud/translate": "^8.3.0",
+    "@speechly/react-client": "^2.2.4",
+    "@speechly/react-ui": "^2.7.5",
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow-models/depth-estimation": "^0.0.4",
     "@tensorflow/tfjs": "^4.20.0",
