--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vitalets/google-translate-api": "^9.2.0",
     "axios": "^1.7.2",
+    "gtts": "^0.2.1",
     "react": "^18.3.1",
     "react-camera-pro": "^1.4.0",
     "react-dom": "^18.3.1",
