--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "@tensorflow-models/coco-ssd": "^2.2.3",
     "@tensorflow-models/depth-estimation": "^0.0.4",
     "@tensorflow/tfjs": "^4.20.0",
+    "@tensorflow/tfjs-backend-webgpu": "^4.20.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@use-gesture/react": "^10.3.1",
     "@vitalets/google-translate-api": "^9.2.0",
     "axios": "^1.7.2",
-    "leaflet": "^1.9.4",
     "gtts": "^0.2.1",
-    "@use-gesture/react": "^10.3.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.411.0",
     "react": "^18.3.1",
     "react-camera-pro": "^1.4.0",
